fix: Button size on small devices

--- a/css/main_content.css
+++ b/css/main_content.css
@@ -181,7 +181,7 @@
 /* =========== Card Header Buttons =========== */
 .buttons {
   opacity: 0;
-  gap: 0.25rem;
+  gap: 0.75rem;
   display: flex;
   align-items: center;
   transform-origin: bottom;
@@ -196,10 +196,10 @@
 }
 
 .button-child {
-  font-size: 1.4rem;
+  font-size: clamp(1.25rem, 4vw, 1.4rem);
   font-family: "Jost";
   margin: 0;
-  padding: 8px;
+  padding: 8px 0;
   cursor: pointer;
   border-radius: 12px;
   transition: opacity 200ms ease-in-out;
